--- a/templates/portfolio/index_portfolio.html
+++ b/templates/portfolio/index_portfolio.html
@@ -1,7 +1,7 @@
 {% extends 'homepage/base.html' %}
 {% load i18n %}
 {% load static %}
-{% block title %}{% trans "Portfolio" %}{% endblock %}
+{% block title %}CRUELTOUCH | {% trans "Portfolio" %}{% endblock %}
 {% block homepageCSS %}
     <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/magnific-popup.css' %}"/>
 {% endblock %}
