--- a/static/client/css/registers.css
+++ b/static/client/css/registers.css
@@ -10,7 +10,7 @@ html {
 }
 
 .user_card {
-    width: 350px;
+    max-width: 360px;
     max-height: 450px;
     margin-top: 50px;
     margin-bottom: 70px;
@@ -26,7 +26,8 @@ html {
 }
 
 .form_container {
-    margin-top: 20px;
+    margin: 25px;
+    padding: 10px;
 }
 
 #form-title {
@@ -39,9 +40,16 @@ html {
 }
 
 .input-group-text {
-    background: blanchedalmond !important;
+    background: transparent !important;
     color: black !important;
     border: 0 !important;
+    border-radius: 0.25rem 0 0 0.25rem !important;
+}
+
+.input-group-append {
+    background: blanchedalmond !important;
+    border: 0 !important;
+    color: black !important;
     border-radius: 0.25rem 0 0 0.25rem !important;
 }
 
@@ -95,4 +103,26 @@ a{
     color: #ffffff;
 }
 
+/* Languages dropdown design */
+.custom-sel {
+    text-decoration: none;
+    margin: 0;
+    padding: 5px;
+    text-align: left;
+    font-family: "Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace;
+    color: #546e7a;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 15px;
+    display: block;
+}
 
+#languages {
+    box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+}
+
+#languages a:hover {
+    color: #fff;
+    background-color: #000;
+}
