--- a/templates/client/booking_and_promotions/information.html
+++ b/templates/client/booking_and_promotions/information.html
@@ -17,7 +17,7 @@
 
         <!--Custom CSS-->
             <link rel="stylesheet" type="text/css" href="{% static 'client/information.css' %}"/>
-            <link rel="stylesheet" type="text/css" href="{% static 'client/button.css' %}"/>
+            <link rel="stylesheet" type="text/css" href="{% static 'client/css/button.css' %}"/>
 
     </head>
     <body>
