--- a/templates/client/login_registration/login.html
+++ b/templates/client/login_registration/login.html
@@ -1,67 +1,69 @@
 {% extends 'homepage/base.html' %}
+{% load i18n %}
 {% load static %}
-{% block title %}CRUELTOUCH | Login{% endblock %}
-
-{% block body %}
-    <body>
-
-
-<head>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-
-    <!--Custom CSS-->
-    <link rel="stylesheet" type="text/css" href="{% static 'client/registers.css' %}" />
-
-</head>
-<body>
-	<div class="container h-100">
-		<div class="d-flex justify-content-center h-100">
-			<div class="user_card">
-				<div class="d-flex justify-content-center">
-
-
-					<h3 id="form-title">LOGIN</h3>
-				</div>
-				<div class="d-flex justify-content-center form_container">
-					<form method="POST" action="">
-                        {% csrf_token %}
-						<div class="input-group mb-3">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
-							</div>
-							<input type="text" name="email" placeholder="Email..." class="form-control">
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
-								<input type="password" name="password" placeholder="Password..." class="form-control" >
-						</div>
-
-							<div class="d-flex justify-content-center mt-3 login_container">
-				 				<input class="btn login_btn" type="submit" value="Login">
-				   			</div>
-					</form>
-
-				</div>
-                    {% for message in messages %}
-                        <p id="messages" style="text-align: center;" class="small">{{ message }}</p>
-                    {% endfor %}
-
-				<div class="mt-4">
-					<div class="d-flex justify-content-center links">
-						Don't have an account? <a href="{% url 'client:register' %}" class="ml-2">Sign Up</a>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-    </body>
-{% endblock body %}
-{% block customfa %}
+{% block title %}CRUELTOUCH | {% trans "Login" %}{% endblock %}
+{% block customCSS %}
+    <link rel="stylesheet" type="text/css" href="{% static 'client/css/registers.css' %}"/>
 {% endblock %}
+{% block body %}
+    <div class="container h-100">
+        <div class="d-flex justify-content-center h-100">
+            <div class="user_card">
+                <div class="d-flex justify-content-center">
+                    <h3 id="form-title">{% trans "LOGIN" %}</h3>
+                </div>
+                <div class="d-flex justify-content-center form_container">
+                    <form method="POST" action="">
+                        {% csrf_token %}
+                        <div class="input-group mb-3">
+                            <div class="input-group-append">
+                                <span class="input-group-text">
+                                    <i class="fa fa-user" aria-hidden="true"></i>
+                                </span>
+                            </div>
+                            <input type="text" name="email" placeholder="{% trans 'Email' %}..." class="form-control">
+                        </div>
+                        <div class="input-group mb-2">
+                            <div class="input-group-append">
+                                <span class="input-group-text">
+                                    <i class="fa fa-key" aria-hidden="true"></i>
+                                </span>
+                            </div>
+                            <input type="password" name="password" placeholder="{% trans 'Password' %}..."
+                                   class="form-control">
+                        </div>
+
+                        <div class="d-flex justify-content-center mt-3 login_container">
+                            <input class="btn login_btn" type="submit" value="{% trans 'Login' %}">
+                        </div>
+                    </form>
+
+                </div>
+                <small class="text-muted" style="padding-top: 5px; margin-top: 5px">
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="alert {% if message.tags %}alert-{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}danger{% else %}{{ message.tags }}{% endif %}{% endif %}"
+                                 role="alert">{{ message }}</div>
+                        {% endfor %}
+                    {% endif %}
+                    {% if form.errors %}
+                        {% for field, errors in form.errors.items %}
+                            {% for error in errors %}
+                                <p style="color: darkred">{{ error }}</p>
+                            {% endfor %}
+                        {% endfor %}
+                    {% endif %}
+                </small>
+                <div class="mt-4">
+                    <div class="d-flex justify-content-center links">
+                        {% trans "Don't have an account" %}?&nbsp;
+                        <a href="{% url 'client:register' %}" class="ml-2">
+                            {% trans "Sign Up" %}
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock body %}
