--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -4,13 +4,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!--Generic title here to change later via the context dictionary in view-->
     <meta charset="UTF-8">
     <title>{% block title %}{% trans "CRUELTOUCH" %} | {% trans "Homepage" %}{% endblock %}</title>
     <meta name="description" content="Crueltouch Website">
     <meta name="keywords" content="photographer, crueltouch, contact crueltouch, roos laurore">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 
     <!-- Favicon -->
     <link href="{% static 'homepage/img/icon/android-icon-48x48.png' %}" rel="shortcut icon"/>
@@ -19,7 +17,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     {% block homepageCSS %}
-        <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/font-awesome.min.css' %}"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+              integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+              crossorigin="anonymous" referrerpolicy="no-referrer"/>
         <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/magnific-popup.css' %}"/>
         <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/slicknav.min.css' %}"/>
         <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/owl.carousel.min.css' %}"/>
@@ -35,16 +35,17 @@
           rel="stylesheet">
 
     <!--[if lt IE 9]-->
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script href="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script href="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <!--[endif]-->
 
 </head>
 <body>
+
 <!-- Page Preloder
 <div id="preloder">
    <div class="loader"></div>
-</div> -->
+</div>-->
 
 <!-- Header section  -->
 <header class="header-section">
@@ -133,10 +134,10 @@
                 {% block customfa %}
                     <div class="col-md-6 order-1 order-md-2">
                     <div class="footer-social-links">
-                        <a href="https://www.facebook.com/crueltouch" target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/crueltouch_/" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/crueltouch" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/crueltouch_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://vm.tiktok.com/ZM8quPJ9t/">
-                            <ion-icon name="logo-tiktok"></ion-icon>
+                            <i class="fa-brands fa-tiktok"></i>
                         </a>
                     </div>
                 {% endblock %}
