--- a/templates/administration/email_template/client_email.html
+++ b/templates/administration/email_template/client_email.html
@@ -171,7 +171,7 @@
                                 <td align="center"
                                     style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;">
                                     <h2 style="font-size: 24px; font-weight: 800; line-height: 30px; color: #ffffff; margin: 0;">
-                                        See my latest works.
+                                        {{ button_label }}
                                     </h2>
                                 </td>
                             </tr>
@@ -180,8 +180,8 @@
                                     <table border="0" cellspacing="0" cellpadding="0">
                                         <tr>
                                             <td align="center" style="border-radius: 5px;" bgcolor="#66b3b7">
-                                                <a href="https://crueltouch.com/portfolio/" target="_blank"
-                                                   style="font-size: 18px; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 5px; background-color: #66b3b7; padding: 15px 30px; border: 1px solid #66b3b7; display: block;">Awesome</a>
+                                                <a href="{{ button_link }}" target="_blank"
+                                                   style="font-size: 18px; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 5px; background-color: #66b3b7; padding: 15px 30px; border: 1px solid #66b3b7; display: block;">{{ button_text }}</a>
                                             </td>
                                         </tr>
                                     </table>
