fixed typo in translation and change link target

--- a/templates/administration/add/add_downloadable_file.html
+++ b/templates/administration/add/add_downloadable_file.html
@@ -140,7 +140,7 @@
                     </div>`;
                     alertBox.classList.remove('not-visible');
                     alertBox.innerHTML = `<br><div class="alert alert-success" role="alert">
-                                            Link successfully created, <a href="${data.link}" class="alert-link">check it now</a>
+                                            Link successfully created, <a href="${data.link}" class="alert-link" target="_blank">check it now</a>
                                             </div>`;
                     setTimeout(() => {
                         progressBox.classList.add('not-visible');
