--- a/templates/administration/download/downloadable_images.html
+++ b/templates/administration/download/downloadable_images.html
@@ -47,7 +47,7 @@
                                            onclick="{{ photo.set_was_downloaded_to_true }}"
                                            style="margin: 2px; overflow: hidden !important;">
                                         <span style="overflow: hidden; white-space: normal; display: block; text-overflow: ellipsis;">
-                                            {% trans "Download %} "{{ photo.get_name_without_extension }}"
+                                            {% trans "Download" %} "{{ photo.get_name_without_extension }}"
                                         </span>
                                         </a>
                                     {% endfor %}
