--- a/templates/administration/download/downloadable_images.html
+++ b/templates/administration/download/downloadable_images.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h3 class="text-center">{% trans "Downloads" %}</h3>
-                <small class="text-center align-center align-content-center offset-md-3">{% trans 'Hi' %}, {{ client_name }},
+                <small class="text-center align-center align-content-center offset-md-2">{% trans 'Hi' %}, {{ client_name }},
                     {% blocktranslate %}
                         you can download the following files either in zip format or file by file.
                     {% endblocktranslate %}
@@ -51,7 +51,7 @@
                                            onclick="{{ photo.set_was_downloaded_to_true }}"
                                            style="margin: 2px; overflow: hidden !important;">
                                         <span style="overflow: hidden; white-space: normal; display: block; text-overflow: ellipsis;">
-                                            {% trans "Download" %} "{{ photo.get_name_without_extension }}"
+                                            {% trans "Download" %} "{{ photo.get_name_without_extension|truncatechars:20 }}"
                                         </span>
                                         </a>
                                     {% endfor %}
