--- a/templates/static_pages_and_forms/contact.html
+++ b/templates/static_pages_and_forms/contact.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8">
-                    <form action="" method="post">
+                    <form action="" method="POST">
                         {% csrf_token %}
                         {{ form }}
 
