--- a/templates/administration/list/list_user.html
+++ b/templates/administration/list/list_user.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}ICERD | {% translate "User List" %}{% endblock %}
+{% block title %}CRUELTOUCH | {% translate "User List" %}{% endblock %}
 
 {% block pageTitle %}
     {% translate "User List" %}
