--- a/templates/administration/list/list_contact_forms.html
+++ b/templates/administration/list/list_contact_forms.html
@@ -1,7 +1,7 @@
 {% extends 'administration/list/data.html' %}
 {% load i18n %}
 {% load static %}
-{% block title %}ICERD | {% translate "Contact Forms" %}{% endblock %}
+{% block title %}CRUELTOUCH | {% translate "Contact Forms" %}{% endblock %}
 
 {% block pageTitle %}
     {% translate "Contact Forms" %}
